urun liste overflow fix

--- a/src/scss/_ecommerce-index-modules.scss
+++ b/src/scss/_ecommerce-index-modules.scss
@@ -77,8 +77,9 @@
 
   .ecommerce-home-products__item__content {
     padding: 8px 12px;
-    height: 90px;
+    height: 86px;
     color: $dark-gray;
+    overflow: hidden;
   }
 }
 .ecommerce-home-products__item__meta {
